--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@ Sekyun Oh
 CSC 337
 Final Project
 04/24/2019
-index.html
+final.html
 
 Basically, this file provides a static form of the page with input, button, and div tags.
 However, the entire dynamic process will be generated through JavaScript file linked on this page.
